--- a/projects/f3-validate/index.html
+++ b/projects/f3-validate/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Fat Free Validator by acemureithi</title>
-
+    <base href="http://acemureithi.github.io/"/>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="javascripts/scale.fix.js"></script>
